additional tweks for h tag margin overflow fix

--- a/src/scss/main.sass
+++ b/src/scss/main.sass
@@ -13,7 +13,7 @@ body
 main
   z-index: 980
   position: relative
-  top: 5em
+  top: 5.5em
 // header classes margin fix
 @for $i from 1 through 12
      h#{$i}
@@ -52,6 +52,7 @@ header
   width: 100%
   height: auto
   top: 0
+  padding: 10px
 .nav-toggle
   display: none
 .nav-toggle-label
